# whisper-audio-streaming

./: .gitmodules  CMakeLists.txt  README.md  test.cpp
frame/: README.md
frame/customized_tests/: lyrics1.txt  lyrics2.txt  lyrics3.txt  test_bluetooth_callback_api.py  test_text_display_from_files.py  test_text_display_from_files_scrolling.py
src/: CMakeLists.txt  audio_manager.cpp  audio_manager.hpp  display_text_output.py  params.cpp  simpleble_test.cpp  simpleble_test.hpp  stream.cpp  translator.cpp  translator.hpp
